--- a/sass/main.css
+++ b/sass/main.css
@@ -2209,6 +2209,19 @@ body {
   padding-bottom: 50px;
 }
 
+.contenedor-col-curso .btn-curso-contenedor {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .contenedor-col-curso .curso-nav a h4 {
   text-transform: uppercase;
   color: black;
