--- a/sass/_cursos.scss
+++ b/sass/_cursos.scss
@@ -189,9 +189,14 @@
         grid-column: 2 / 3;
         grid-row: 2 / 3;
         display: flex;
-        align-items: flex-end;
+        flex-direction: column;
+        align-items: center;
         img {
             width: 100%;
+        }
+        p {
+            color: purple;
+            font-weight: bolder;
         }
     }
     .curso-carrito {
