--- a/sass/main.css
+++ b/sass/main.css
@@ -3469,12 +3469,20 @@ body {
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
   }
+  .eventos-nuevos .eventos-nuevos-body {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+    gap: 0;
+  }
 }
 
 @media screen and (max-width: 650px) {
   .masthead-eventos {
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
+  }
+  .eventos-nuevos .eventos-nuevos-body .eventos-nuevos-body-col .eventos-nuevos-body-col-1 {
+    max-width: 100%;
   }
 }
 /*# sourceMappingURL=main.css.map */
